force-app/main/default/objects/Escola__c/Escola__c.object-meta.xml
<CustomObject>
    <label>Escola</label>
    <nameField>
        <label>Escola Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Escolas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>