force-app/main/default/objects/Escola__c/fields/Idioma__c.field-meta.xml
<CustomField>
    <fullName>Idioma__c</fullName>
    <label>Idioma</label>
    <length>200</length>
    <type>Text</type>
</CustomField>