force-app/main/default/objects/Escola__c/fields/Valor_Semana_General__c.field-meta.xml
<CustomField>
    <fullName>Valor_Semana_General__c</fullName>
    <label>Valor por semana general</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>